--- a/templates/application_detail_psychologist.html
+++ b/templates/application_detail_psychologist.html
@@ -83,7 +83,7 @@
                             <div class="form-error">{{ consultation_form.message.errors }}</div>
                         {% endif %}
                     </div>
-                    <button type="submit" class="btn btn-primary" style="margin-top: 1rem;">Отправить ответ</button>
+                    <button type="submit" class="btn btn-primary btn-submit-margin">Отправить ответ</button>
                 </form>
             </div>
         {% endif %}
