--- a/templates/dashboard_psychologist.html
+++ b/templates/dashboard_psychologist.html
@@ -70,7 +70,7 @@
                 </tbody>
             </table>
         {% else %}
-            <p style="margin-top: 1rem;">Нет заявок в общем пуле.</p>
+            <p class="no-applications">Нет заявок в общем пуле.</p>
         {% endif %}
     </div>
 </section>
