--- a/templates/dashboard_admin.html
+++ b/templates/dashboard_admin.html
@@ -51,6 +51,7 @@
                     <th>Тема</th>
                     <th>Статус</th>
                     <th>Дата</th>
+                    <th>Действия</th>
                 </tr>
             </thead>
             <tbody>
@@ -65,10 +66,15 @@
                             </span>
                         </td>
                         <td>{{ feedback.created_at|date:"d.m.Y H:i" }}</td>
+                        <td>
+                            <a href="{% url 'feedback_detail_admin' feedback.id %}" class="btn btn-primary btn-sm">
+                                Детали
+                            </a>
+                        </td>
                     </tr>
                 {% empty %}
                     <tr>
-                        <td colspan="5" class="empty-table-cell">Нет форм обратной связи</td>
+                        <td colspan="6" class="empty-table-cell">Нет форм обратной связи</td>
                     </tr>
                 {% endfor %}
             </tbody>
